# woothee-rust

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  search-index.js
benches/: benchmark.rs
implementors/collections/borrow/: trait.ToOwned.js
implementors/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js  trait.Pointer.js  trait.Write.js
implementors/core/hash/: trait.BuildHasher.js  trait.Hash.js  trait.Hasher.js
implementors/core/iter/iterator/: trait.Iterator.js
implementors/core/iter/traits/: trait.DoubleEndedIterator.js  trait.ExactSizeIterator.js  trait.Extend.js  trait.FromIterator.js  trait.FusedIterator.js  trait.IntoIterator.js  trait.TrustedLen.js
implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
implementors/core/ops/: trait.Add.js  trait.AddAssign.js  trait.BitAnd.js  trait.BitAndAssign.js  trait.BitOr.js  trait.BitXor.js  trait.BoxPlace.js  trait.Boxed.js  trait.CoerceUnsized.js  trait.Deref.js  trait.DerefMut.js  trait.Div.js  trait.DivAssign.js  trait.Drop.js  trait.FnOnce.js  trait.InPlace.js  trait.Index.js  trait.IndexMut.js  trait.Mul.js  trait.MulAssign.js  trait.Place.js  trait.Placer.js  trait.Sub.js  trait.SubAssign.js
implementors/core/str/: trait.FromStr.js
implementors/core/str/pattern/: trait.Pattern.js
implementors/std/error/: trait.Error.js
src/: .dataset.rs.swp  dataset.rs  lib.rs  parser.rs  woothee.rs
src/woothee/src/: dataset.rs.html  lib.rs.html  parser.rs.html  woothee.rs.html
templates/: dataset.tmpl  tests.tmpl
tests/: appliance.rs  blank.rs  crawler.rs  crawler_google.rs  crawler_nonmajor.rs  misc.rs  mobilephone_au.rs  mobilephone_docomo.rs  mobilephone_misc.rs  mobilephone_softbank.rs  mobilephone_willcom.rs  pc_lowpriority.rs  pc_misc.rs  pc_win.rs  pc_windows.rs  smartphone_android.rs  smartphone_ios.rs  smartphone_misc.rs
woothee/: fn.is_crawler.html  fn.parse.html  index.html  is_crawler.v.html  sidebar-items.js
woothee/dataset/: fn.get_default_dataset.html  get_default_dataset.v.html  index.html  sidebar-items.js
woothee/parser/: WootheeResult.t.html  index.html  struct.Parser.html  struct.WootheeResult.html
woothee/woothee/: VALUE_UNKNOWN.v.html  constant.VALUE_UNKNOWN.html  index.html
