[package]
name = "woothee"
version = "0.8.0"
authors = ["hhatto <hhatto.jp@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/woothee/woothee-rust"
keywords = ["useragent", "ua"]
readme = "README.md"
description = "user-agent strings parser"
documentation = "https://docs.rs/woothee"
build = "build.rs"

[dependencies]
regex = "^0.2"
lazy_static = "1.0.0"
clippy = { version = "0.0.133", optional = true }

[dev-dependencies]
uap-rust = "0.0.4"

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"

[features]
default = []
generate = ["yaml-rust", "tera", "tempdir", "glob", "serde", "serde_json", "serde_derive"]

[build-dependencies]
tera = { version = "0.8", optional = true }
yaml-rust = { version = "0.3.5", optional = true }
tempdir = { version = "0.3", optional = true }
glob = { version = "0.2.11", optional = true }
serde = { version = "0.9", optional = true }
serde_json = { version = "0.9", optional = true }
serde_derive = { version = "0.9", optional = true }
